# Young-Tableaux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yaml
YoungTableaux/src/: main.cc  tableaux.cc  tableaux.hpp
YoungTableaux/test/: main.py  test.py  test_tableaux.py
src/: main  main.cc  tableaux.cc
test/: test_tableaux.py
