[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Young-Tableaux"
version = "0.1.0"
description = "makes all the young tableaux of order n"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "numpy"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"